--- a/index.html
+++ b/index.html
@@ -9,40 +9,52 @@
 </head>
 
 <body>
-
-<aside>
-	<nav>
-		<ul>
-			<li><a href="">Home</a></li>
-			<li><a href="">Products &amp; Orders</a></li>
-			<li><a href="">About</a></li>
-			<li><a href="">Newsfeed</a></li>
-			<li><a href="">Contact</a></li>
-		</ul>
-	</nav>
-</aside>
-
 <div class="wrapper">
 	<div class="grid">
-		<div class="column-6-12 centered">logo</div>
-		<div class="column-8-12 centered">review</div>
-		<div class="column-8-12 centered">seasonal flavor teaser</div>
-		<div class="column-2-12 right"></div>
-		<div class="column-4-12 right">Buy now buttom</div>
-		<div class="column-4-12 clearfix centered">logo</div>
-		<div class="column-8-12">Little about us</div>
-		<div class="column-2-12"></div>
+		<div class="column-2-12">
+			<nav>
+				<ul>
+					<li><a href=""><img class="icons" src="images/home.png" alt="Home button">Home</a></li>
+					<li><a href=""><img class="icons" src="images/bean.png" alt="Coffee bean button">Products&amp;Orders</a></li>
+					<li><a href=""><img class="icons" src="images/info.png" alt="Info button">About</a></li>
+					<li><a href=""><img class="icons" src="images/feed.png" alt="Newsfeed button">Newsfeed</a></li>
+					<li><a href=""><img class="icons" src="images/user.png" alt="Contact button">Contact</a></li>
+				</ul>
+			</nav>
+		</div>
+		<div class="column-4-12 centered">
+			<img class="logo" src="images/twin-finch-logo.png" alt="Twin Finch Logo"></a>
+		</div>
+		<div class="column-6-12 centered">
+			<p>“This extraordinary coffee almost defies description with its aromatic complexity while retaining a classic clarity of structure.” - Coffee Review</p>
+		</div>
+		<div class="column-6-12 centered">
+			<p>Our featured seasonal roast, Evening Oak, is a medium-dark roast that will awaken your senses with its flavors originating from Eastern Java and Indonesia. Order now before its gone.</p>
+		</div>
+		<div class="column-3-12 clearfix right"></div>
+		<div class="column-3-12 right">
+			<a href="">Buy now</a>
+		</div>
+		<div class="column-2-12 clearfix centered">
+			<img class="logo" src="images/twin-finch-logo.png" alt="Twin Finch Logo"></a>
+		</div>
+		<div class="column-6-12 centered">
+			<h1>A Bit About Us</h1>
+			<p>Twin Finch Roastery is an authentic micro-roastery; small, dedicated, and highly focused on quality. We have a constantly evolving, hand picked selection of fine coffee origins and delicious blends engineered to help you brew a cafe-quality cup at home.</p>
+		</div>
+		<div class="column-6-12 centered"><h1>Products & Orders</h1>
+			<div class="grid">
+				<div class="column-6-12">product photo</div>
+				<div class="column-6-12">product description</div>
+			</div>
+						<div class="grid">
+				<div class="column-6-12">product photo</div>
+				<div class="column-6-12">product description</div>
+			</div>
+		</div>
 	</div>
 </div>
 
-<div class="wrapper">
-	<div class="grid">
-		<div class="column-12-12">...</div>
-		<div class="column-mobile column-4-12">...</div>
-		<div class="column-mobile column-4-12">...</div>
-		<div class="column-4-12">...</div>
-	</div>
-</div>
 
 </body>
 </html>
