Majority of prototype
Mobile and desktop is done, I may make some minor changes

--- a/index.html
+++ b/index.html
@@ -14,120 +14,137 @@
 		<div class="column-2-12">
 			<nav>
 				<ul>
-					<li><a href=""><img class="icons" src="images/home.png" alt="Home button">HOME</a></li>
-					<li><a href=""><img class="icons" src="images/bean.png" alt="Coffee bean button">PRODUCTS&amp;ORDERS</a></li>
-					<li><a href=""><img class="icons" src="images/info.png" alt="Info button">ABOUT US</a></li>
-					<li><a href=""><img class="icons" src="images/feed.png" alt="Newsfeed button">NEWSFEED</a></li>
-					<li><a href=""><img class="icons" src="images/user.png" alt="Contact button">CONTACT US</a></li>
+					<li><a href="#home"><img class="icons" src="images/home.png" alt="Home button"><span class="nav-link">HOME</span></a></li>
+					<li><a href="#products"><img class="icons" src="images/bean.png" alt="Coffee bean button"><span class="nav-link">PRODUCTS&amp;ORDERS</span></a></li>
+					<li><a href="#about"><img class="icons" src="images/info.png" alt="Info button"><span class="nav-link">ABOUT US</span></a></li>
+					<li><a href="#newsfeed"><img class="icons" src="images/feed.png" alt="Newsfeed button"><span class="nav-link">NEWSFEED</span></a></li>
+					<li><a href="#contact"><img class="icons" src="images/user.png" alt="Contact button"><span class="nav-link">CONTACT US</span></a></li>
 				</ul>
 			</nav>
 		</div>
-		<div class="column-4-12 centered">
-			<img class="logo" src="images/twin-finch-logo.png" alt="Twin Finch Logo">
-		</div>
-		<div class="column-6-12 centered">
-			<p>“This extraordinary coffee almost defies description with its aromatic complexity while retaining a classic clarity of structure.” - Coffee Review</p>
-		</div>
-		<div class="column-6-12 centered">
-			<h1>OUR SEASONAL FLAVOR</h1>
-			<p>Our featured seasonal roast, Evening Oak, is a medium-dark roast that will awaken your senses with its flavors originating from Eastern Java and Indonesia. Order now before its gone.</p>
-		</div>
-		<div class="column-3-12 clearfix right"></div>
-		<div class="column-3-12 right">
-			<a href="">BUY NOW</a>
-		</div>
+		
+		<section id="home">
+			<div class="column-4-12 centered">
+				<img class="logo" src="images/twin-finch-logo.png" alt="Twin Finch Logo">
+			</div>
+		</section>
+			<div class="review">
+				<div class="column-6-12 centered">
+					<p>“This extraordinary coffee almost defies description with its aromatic complexity while retaining a classic clarity of structure.” - Coffee Review</p>
+				</div>
+			</div>
+
+		<section id="seasonal-teaser">
+			<div class="column-6-12 centered">
+				<h1>OUR SEASONAL FLAVOR</h1>
+				<p>Our featured seasonal roast, Evening Oak, is a medium-dark roast that will awaken your senses with its flavors originating from Eastern Java and Indonesia. Order now before its gone.</p>
+			</div>
+			<div class="column-3-12 clearfix right"></div>
+			<div class="column-3-12 right">
+				<a href="">BUY NOW</a>
+			</div>
+
 		<div class="column-2-12 clearfix centered">
 			<img class="logo" src="images/twin-finch-logo.png" alt="Twin Finch Logo">
 		</div>
+		</section>
 		<div class="column-6-12 centered">
-			<h1>A BIT ABOUT US</h1>
+			<h1 id"short-about">A BIT ABOUT US</h1>
 			<p>Twin Finch Roastery is an authentic micro-roastery; small, dedicated, and highly focused on quality. We have a constantly evolving, hand picked selection of fine coffee origins and delicious blends engineered to help you brew a cafe-quality cup at home.</p>
 		</div>
-		<div class="column-6-12 centered"><h1>PRODUCTS&amp;ORDERS</h1>
-			<div class="grid">
-				<div class="column-6-12"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch packaging"></div>
-				<div class="column-6-12">
-					<h2>FINCH HOUSE BLEND</h2>
-					<p>Medium Roast</p>
-					<p>Hint of citrus, complemented by flavors of dark chocolate, peanut and light pepper notes.</p>
-					<p>Cajamarca & Moyobamba Regions, Peru</p>
-					<a class="right" href="">BUY NOW</a>
-				</div>
-			</div>
-			<div class="grid">
-				<div class="column-6-12"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch packaging"></div>
-				<div class="column-6-12">
-					<h2>SUNRISE</h2>
-					<p>Light Roast</p>
-					<p>Light, fruity acidity which complements its fully nutty body and unique spicy tones.</p>
-					<p>La Chiapas, Mexico</p>
-					<a class="right" href="">BUY NOW</a>
-				</div>
-			</div>
-			<div class="grid">
-				<div class="column-6-12"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch packaging"></div>
-				<div class="column-6-12">
-					<h2>MIDNIGHT</h2>
-					<p>Dark Roast</p>
-					<p>Roasted into second crack for a big, bold and dark cup. Beans display oil.</p>
-					<p>Latin America</p>
-					<a class="right" href="">BUY NOW</a>
-				</div>
-			</div>
-			<div class="grid">
-				<div class="column-6-12"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch packaging"></div>
-				<div class="column-6-12">
-					<h2>ESPRESSO</h2>
-					<p>Clean, a little roasty, sumptuous crema, unfussy, delicious.</p>
-					<p>Latin America, Africa, Indonesia</p>
-					<a class="right" href="">BUY NOW</a>
-				</div>
-			</div>
-			<div class="grid">
-				<div class="column-6-12"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch packaging"></div>
-				<div class="column-6-12">
-					<h2>EVENING OAK</h2>	
-					<p>Medium-Dark Roast</p>
-					<p>Our featured roast of the season. Pungently rich and complex with hints of night-blooming flowers and coriander in aroma and cup.</p>
-					<p>Eastern Java, Indonesia</p>
-					<a class="right" href="">BUY NOW</a>
-				</div>
-			</div>
-		</div>
-		<div class="column-6-12 centered">
-			<h1>THE REST OF OUR STORY</h1>
-			<p>Our coffee is roasted in a hot air, refractory lined roaster with an extraordinary level of control. The significance of relying on a high volume of hot air to roast coffee beans can't be understated. Most small coffee roasters use a single stage burner which offers virtually no control during the roasting process. The refractory significantly reduces hot spots which can damage coffee beans and produces a much more even roasting environment.</p><p>Online orders usually ship quickly and arrive within three business days. We only ship the freshest coffee and your satisfaction is guaranteed. Our rotating, featured coffees are roasted on a more limited basis and your order may be held until the next time a batch hits the roaster. We only ship whole bean, but will grind for you in-store per request.</p>
-		</div>
-		<div class="column-6-12 centered">
-			<div class="grid">
-				<div class="column-6-12 left">
-					<h1>HAPPENINGS</h1>
-					<img class="feedphoto left" src="images/twin-finch-logo.png" alt="Twin Finch logo">
-					<h2 class="left clearfix">Renee</h2>
-					<p>&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
-					<img class="feedphoto left" src="images/twin-finch-logo.png" alt="Twin Finch logo">
-					<h2 class="left clearfix">Renee</h2>
-					<p>&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
-					<img class="feedphoto left" src="images/twin-finch-logo.png" alt="Twin Finch logo">
-					<h2 class="left clearfix">Renee</h2>
-					<p>&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
-				</div>
-				
-				<div class="column-6-12">
-					<img class="logo" src="images/twin-finch-logo.png" alt="Twin Finch logo">
-					<h1>BREW TIPS</h1>
-					<p>Brewing a perfect cup of coffee is the weakest link in the full enjoyment of fine coffee. Buying the finest coffee is only the beginning and can go for naught if the brewing is not done correctly. It is very easy to ruin otherwise excellent coffee with improper brewing. We realize you would like to hear that once you have purchased excellent coffee beans, the rest is as simple as pushing a button, but, all we can say is: it's time to "wake up and smell the coffee".</p>
-					<div class="column-6-12 right">
-						<a href="">READ MORE...</a>
+
+		
+			<div class="column-6-12 centered"><h1 id="products">PRODUCTS&amp;ORDERS</h1>
+				<div class="grid">
+					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch packaging"></div>
+					<div class="column-6-12 column-mobile">
+						<h2>FINCH HOUSE BLEND</h2>
+						<p>Medium Roast</p>
+						<p>Hint of citrus, complemented by flavors of dark chocolate, peanut and light pepper notes.</p>
+						<p>Cajamarca & Moyobamba Regions, Peru</p>
+						<a class="right" href="">BUY NOW</a>
 					</div>
-					<h1>CONTACT US</h1>
-					<img class="map" src="images/map.png">
-					<p>457 NW Market St. Seattle, WA 94823 (394)423&ndash;4523</p>
+				</div>
+				<div class="grid">
+					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch packaging"></div>
+					<div class="column-6-12 column-mobile">
+						<h2>SUNRISE</h2>
+						<p>Light Roast</p>
+						<p>Light, fruity acidity which complements its fully nutty body and unique spicy tones.</p>
+						<p>La Chiapas, Mexico</p>
+						<a class="right" href="">BUY NOW</a>
+					</div>
+				</div>
+				<div class="grid">
+					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch packaging"></div>
+					<div class="column-6-12 column-mobile">
+						<h2>MIDNIGHT</h2>
+						<p>Dark Roast</p>
+						<p>Roasted into second crack for a big, bold and dark cup. Beans display oil.</p>
+						<p>Latin America</p>
+						<a class="right" href="">BUY NOW</a>
+					</div>
+				</div>
+				<div class="grid">
+					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch packaging"></div>
+					<div class="column-6-12 column-mobile">
+						<h2>ESPRESSO</h2>
+						<p>Clean, a little roasty, sumptuous crema, unfussy, delicious.</p>
+						<p>Latin America, Africa, Indonesia</p>
+						<a class="right" href="">BUY NOW</a>
+					</div>
+				</div>
+				<div class="grid">
+					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch packaging"></div>
+					<div class="column-6-12 column-mobile">
+						<h2>EVENING OAK</h2>	
+						<p>Medium-Dark Roast</p>
+						<p>Our featured roast of the season. Pungently rich and complex with hints of night-blooming flowers and coriander in aroma and cup.</p>
+						<p>Eastern Java, Indonesia</p>
+						<a class="right" href="">BUY NOW</a>
+					</div>
 				</div>
 			</div>
-		</div>
+		
+			<div class="column-6-12 centered">
+				<h1 id="about">THE REST OF OUR STORY</h1>
+				<p>Our coffee is roasted in a hot air, refractory lined roaster with an extraordinary level of control. The significance of relying on a high volume of hot air to roast coffee beans can't be understated. Most small coffee roasters use a single stage burner which offers virtually no control during the roasting process. The refractory significantly reduces hot spots which can damage coffee beans and produces a much more even roasting environment.</p><p>Online orders usually ship quickly and arrive within three business days. We only ship the freshest coffee and your satisfaction is guaranteed. Our rotating, featured coffees are roasted on a more limited basis and your order may be held until the next time a batch hits the roaster. We only ship whole bean, but will grind for you in-store per request.</p>
+			</div>
+		
+			<div class="column-6-12 centered">
+				<div class="grid">
+					<div class="column-6-12 left column-mobile">
+						<h1 id="newsfeed">HAPPENINGS</h1>
+						<img class="feedphoto left" src="images/twin-finch-logo.png" alt="Twin Finch logo">
+						<h2 class="left clearfix">Renee</h2>
+						<p>&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
+						<img class="feedphoto left" src="images/twin-finch-logo.png" alt="Twin Finch logo">
+						<h2 class="left clearfix">Renee</h2>
+						<p>&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
+						<img class="feedphoto left" src="images/twin-finch-logo.png" alt="Twin Finch logo">
+						<h2 class="left clearfix">Renee</h2>
+						<p>&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
+					</div>
+					<div class="column-6-12 column-mobile">
+						<img class="logo" src="images/twin-finch-logo.png" alt="Twin Finch logo">
+					<section id="brew-tips">
+						<h1>BREW TIPS</h1>
+						<p>Brewing a perfect cup of coffee is the weakest link in the full enjoyment of fine coffee. Buying the finest coffee is only the beginning and can go for naught if the brewing is not done correctly. It is very easy to ruin otherwise excellent coffee with improper brewing. We realize you would like to hear that once you have purchased excellent coffee beans, the rest is as simple as pushing a button, but, all we can say is: it's time to "wake up and smell the coffee".</p>
+						<div class="column-6-12 right">
+							<a href="">READ MORE...</a>
+						</div>
+					</section>
+						<h1 id="contact">CONTACT US</h1>
+						<img class="map" src="images/map.png">
+						<p>457 NW Market St. Seattle, WA 94823 (394)423&ndash;4523</p>
+					</div>
+				</div>
+			</div>
+		<footer>
 		<a href="">SUBSCRIBE</a>	
-		<footer>&copy; 2014. Copyright info will be placed here.</footer>	
+		<p>&copy; 2014 Twin Finch. All right reserved.<p>
+		<img class="logo-footer" src="images/twin-finch-logo.png">
+		</footer>	
 	</div>
 </div>
 </body>
