--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		</div>
 		</section>
 		<div class="column-6-12 centered">
-			<h1 id"short-about">A BIT ABOUT US</h1>
+			<h1 id="short-about">A BIT ABOUT US</h1>
 			<p>Twin Finch Roastery is an authentic micro-roastery; small, dedicated, and highly focused on quality. We have a constantly evolving, hand picked selection of fine coffee origins and delicious blends engineered to help you brew a cafe-quality cup at home.</p>
 		</div>
 
@@ -113,19 +113,19 @@
 		
 			<div class="column-6-12 centered">
 				<div class="grid">
-					<div class="column-6-12 left column-mobile">
+					<div class="column-6-12 left">
 						<h1 id="newsfeed">HAPPENINGS</h1>
 						<img class="feedphoto left" src="images/twin-finch-logo.png" alt="Twin Finch logo">
-						<h2 class="left clearfix">Renee</h2>
-						<p>&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
+						<h2 class="right">Renee</h2>
+						<p class="clearfix">&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
 						<img class="feedphoto left" src="images/twin-finch-logo.png" alt="Twin Finch logo">
-						<h2 class="left clearfix">Renee</h2>
-						<p>&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
+						<h2 class="right">Renee</h2>
+						<p class="clearfix">&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
 						<img class="feedphoto left" src="images/twin-finch-logo.png" alt="Twin Finch logo">
-						<h2 class="left clearfix">Renee</h2>
-						<p>&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
+						<h2 class="right">Renee</h2>
+						<p class="clearfix">&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
 					</div>
-					<div class="column-6-12 column-mobile">
+					<div class="column-6-12">
 						<img class="logo" src="images/twin-finch-logo.png" alt="Twin Finch logo">
 					<section id="brew-tips">
 						<h1>BREW TIPS</h1>
@@ -135,15 +135,18 @@
 						</div>
 					</section>
 						<h1 id="contact">CONTACT US</h1>
-						<img class="map" src="images/map.png">
+						<img class="map" src="images/map.png" alt="Map of 457 NW Market St. Seattle Washington">
 						<p>457 NW Market St. Seattle, WA 94823 (394)423&ndash;4523</p>
+						<h1>Contact Form</h1>
+
+					
 					</div>
 				</div>
 			</div>
 		<footer>
 		<a href="">SUBSCRIBE</a>	
 		<p>&copy; 2014 Twin Finch. All right reserved.<p>
-		<img class="logo-footer" src="images/twin-finch-logo.png">
+		<img class="logo-footer" src="images/twin-finch-logo.png" alt="Twin Finch logo">
 		</footer>	
 	</div>
 </div>
