Final Prototype Commit
Took off borders and added contact form. HTML is validated.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,12 @@
 						<h1 id="contact">CONTACT US</h1>
 						<img class="map" src="images/map.png" alt="Map of 457 NW Market St. Seattle Washington">
 						<p>457 NW Market St. Seattle, WA 94823 (394)423&ndash;4523</p>
-						<h1>Contact Form</h1>
+						<form>
+							<input type="text" placeholder="Name">
+							<input type="email" placeholder="Email">
+							<input type="text" placeholder="Message">
+							<button><span></span> Send Message</button>
+						</form>
 
 					
 					</div>
