Changes: images, newsfeed, typefaces
added typefaces, images, newsfeed

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Twin Finch</title>
 
-<link href="styles.css" rel="stylesheet" type="text/css">
+<meta charset="UTF-8">
+<title>Twin Finch Roastery</title>
+
+<link href="styles/styles.css" rel="stylesheet" type="text/css">
+
 
 </head>
 
@@ -56,7 +58,7 @@
 		
 			<div class="column-6-12 centered"><h1 id="products">PRODUCTS&amp;ORDERS</h1>
 				<div class="grid">
-					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch packaging"></div>
+					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch House Blend Packaging"></div>
 					<div class="column-6-12 column-mobile">
 						<h2>FINCH HOUSE BLEND</h2>
 						<p>Medium Roast</p>
@@ -66,7 +68,7 @@
 					</div>
 				</div>
 				<div class="grid">
-					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch packaging"></div>
+					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch Sunrise Packaging"></div>
 					<div class="column-6-12 column-mobile">
 						<h2>SUNRISE</h2>
 						<p>Light Roast</p>
@@ -76,7 +78,7 @@
 					</div>
 				</div>
 				<div class="grid">
-					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch packaging"></div>
+					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch Midnight Packaging"></div>
 					<div class="column-6-12 column-mobile">
 						<h2>MIDNIGHT</h2>
 						<p>Dark Roast</p>
@@ -86,7 +88,7 @@
 					</div>
 				</div>
 				<div class="grid">
-					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch packaging"></div>
+					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch Espresso Packaging"></div>
 					<div class="column-6-12 column-mobile">
 						<h2>ESPRESSO</h2>
 						<p>Clean, a little roasty, sumptuous crema, unfussy, delicious.</p>
@@ -95,7 +97,7 @@
 					</div>
 				</div>
 				<div class="grid">
-					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch packaging"></div>
+					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch Evening Oak Packaging"></div>
 					<div class="column-6-12 column-mobile">
 						<h2>EVENING OAK</h2>	
 						<p>Medium-Dark Roast</p>
@@ -115,14 +117,14 @@
 				<div class="grid">
 					<div class="column-6-12 left">
 						<h1 id="newsfeed">HAPPENINGS</h1>
-						<img class="feedphoto left" src="images/twin-finch-logo.png" alt="Twin Finch logo">
-						<h2 class="right">Renee</h2>
+						<img class="feedphoto left" src="images/profile-photo-of-jamie.jpg" alt="Profile Photo of User Jamie">
+						<h2 class="right">Jamie</h2>
 						<p class="clearfix">&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
-						<img class="feedphoto left" src="images/twin-finch-logo.png" alt="Twin Finch logo">
-						<h2 class="right">Renee</h2>
+						<img class="feedphoto left" src="images/profile-photo-of-monica.jpg" alt="Profile Photo of User Monica">
+						<h2 class="right">Monica</h2>
 						<p class="clearfix">&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
-						<img class="feedphoto left" src="images/twin-finch-logo.png" alt="Twin Finch logo">
-						<h2 class="right">Renee</h2>
+						<img class="feedphoto left" src="images/profile-photo-of-rachel.jpg" alt="Profile Photo of User Rachel">
+						<h2 class="right">Rachel</h2>
 						<p class="clearfix">&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
 					</div>
 					<div class="column-6-12">
