First Final Commit
Everything works and everything validates.

--- a/index.html
+++ b/index.html
@@ -17,42 +17,48 @@
 			<nav>
 				<ul>
 					<li><a href="#home"><img class="icons" src="images/home.png" alt="Home button"><span class="nav-link">HOME</span></a></li>
-					<li><a href="#products"><img class="icons" src="images/bean.png" alt="Coffee bean button"><span class="nav-link">PRODUCTS&amp;ORDERS</span></a></li>
-					<li><a href="#about"><img class="icons" src="images/info.png" alt="Info button"><span class="nav-link">ABOUT US</span></a></li>
-					<li><a href="#newsfeed"><img class="icons" src="images/feed.png" alt="Newsfeed button"><span class="nav-link">NEWSFEED</span></a></li>
-					<li><a href="#contact"><img class="icons" src="images/user.png" alt="Contact button"><span class="nav-link">CONTACT US</span></a></li>
+					<li><a href="#products"><img class="icons" src="images/products-orders.png" alt="Coffee bean button"><span class="nav-link">PRODUCTS&amp;ORDERS</span></a></li>
+					<li><a href="#about"><img class="icons" src="images/about-us.png" alt="Info button"><span class="nav-link">ABOUT US</span></a></li>
+					<li><a href="#newsfeed"><img class="icons" src="images/newsfeed.png" alt="Newsfeed button"><span class="nav-link">NEWSFEED</span></a></li>
+					<li><a href="#contact"><img class="icons" src="images/contact-us.png" alt="Contact button"><span class="nav-link">CONTACT US</span></a></li>
+					<li><a href="http://facebook.com"><img class="icons" src="images/social-media-icons-facebook.png" alt="Facebook Social Media Icon"></a></li>
+					<li><a href="http://twitter.com"><img class="icons" src="images/social-media-icons-twitter.png" alt="Twitter Social Media Icon"></a></li>
+					<li><a href="http://google.com"><img class="icons" src="images/social-media-icons-google-plus.png" alt="Google Plus Social Media Icon"></a></li>
 				</ul>
 			</nav>
 		</div>
-		
-		<section id="home">
-			<div class="column-4-12 centered">
-				<img class="logo" src="images/twin-finch-logo.png" alt="Twin Finch Logo">
-			</div>
-		</section>
-			<div class="review">
-				<div class="column-6-12 centered">
-					<p>“This extraordinary coffee almost defies description with its aromatic complexity while retaining a classic clarity of structure.” - Coffee Review</p>
+		<div class="home">
+			<section id="home">
+				<div class="column-4-12 centered">
+					<img class="logo centered" src="images/maroon-twin-finch-logo.png" alt="Maroon Colored Twin Finch Logo">
 				</div>
-			</div>
-
-		<section id="seasonal-teaser">
-			<div class="column-6-12 centered">
-				<h1>OUR SEASONAL FLAVOR</h1>
-				<p>Our featured seasonal roast, Evening Oak, is a medium-dark roast that will awaken your senses with its flavors originating from Eastern Java and Indonesia. Order now before its gone.</p>
-			</div>
-			<div class="column-3-12 clearfix right"></div>
-			<div class="column-3-12 right">
-				<a href="">BUY NOW</a>
-			</div>
+			</section>
+				<div class="review">
+					<div class="column-6-12 centered">
+						<p>“This extraordinary coffee almost defies description with its aromatic complexity while retaining a classic clarity of structure.” - Coffee Review</p>
+					</div>
+				</div>
+	
+			<section id="seasonal-teaser">
+				<div class="column-6-12 centered">
+					<h1>OUR SEASONAL FLAVOR</h1>
+					<p>Our featured seasonal roast, Evening Oak, is a medium-dark roast that will awaken your senses with its flavors originating from Eastern Java and Indonesia. Order now before its gone.</p>
+				</div>
+				<div class="column-3-12 clearfix right"></div>
+				<div class="column-3-12 offset-3-12 right">
+					<a class="button" href="">BUY NOW</a>
+				</div>
+			</section>
+		</div>
 
 		<div class="column-2-12 clearfix centered">
-			<img class="logo" src="images/twin-finch-logo.png" alt="Twin Finch Logo">
+			<img class="logo-about" src="images/white-twin-finch-logo.png" alt="White Colored Twin Finch Logo">
 		</div>
-		</section>
+
 		<div class="column-6-12 centered">
 			<h1 id="short-about">A BIT ABOUT US</h1>
 			<p>Twin Finch Roastery is an authentic micro-roastery; small, dedicated, and highly focused on quality. We have a constantly evolving, hand picked selection of fine coffee origins and delicious blends engineered to help you brew a cafe-quality cup at home.</p>
+			<a href="#about">READ MORE...</a>
 		</div>
 
 		
@@ -61,49 +67,54 @@
 					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch House Blend Packaging"></div>
 					<div class="column-6-12 column-mobile">
 						<h2>FINCH HOUSE BLEND</h2>
+						<p>&#36;13.95</p>
 						<p>Medium Roast</p>
 						<p>Hint of citrus, complemented by flavors of dark chocolate, peanut and light pepper notes.</p>
 						<p>Cajamarca & Moyobamba Regions, Peru</p>
-						<a class="right" href="">BUY NOW</a>
+						<a class="button right" href="">BUY NOW</a>
 					</div>
 				</div>
 				<div class="grid">
 					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch Sunrise Packaging"></div>
 					<div class="column-6-12 column-mobile">
 						<h2>SUNRISE</h2>
+						<p>&#36;13.95</p>
 						<p>Light Roast</p>
 						<p>Light, fruity acidity which complements its fully nutty body and unique spicy tones.</p>
 						<p>La Chiapas, Mexico</p>
-						<a class="right" href="">BUY NOW</a>
+						<a class="button right" href="">BUY NOW</a>
 					</div>
 				</div>
 				<div class="grid">
 					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch Midnight Packaging"></div>
 					<div class="column-6-12 column-mobile">
 						<h2>MIDNIGHT</h2>
+						<p>&#36;13.95</p>
 						<p>Dark Roast</p>
 						<p>Roasted into second crack for a big, bold and dark cup. Beans display oil.</p>
 						<p>Latin America</p>
-						<a class="right" href="">BUY NOW</a>
+						<a class="button right" href="">BUY NOW</a>
 					</div>
 				</div>
 				<div class="grid">
 					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch Espresso Packaging"></div>
 					<div class="column-6-12 column-mobile">
 						<h2>ESPRESSO</h2>
+						<p>&#36;15.95</p>
 						<p>Clean, a little roasty, sumptuous crema, unfussy, delicious.</p>
 						<p>Latin America, Africa, Indonesia</p>
-						<a class="right" href="">BUY NOW</a>
+						<a class="button right" href="">BUY NOW</a>
 					</div>
 				</div>
 				<div class="grid">
 					<div class="column-6-12 column-mobile"><img class="product" src="images/twin-finch-packaging.png" alt="Twin Finch Evening Oak Packaging"></div>
 					<div class="column-6-12 column-mobile">
 						<h2>EVENING OAK</h2>	
+						<p>&#36;15.95</p>
 						<p>Medium-Dark Roast</p>
 						<p>Our featured roast of the season. Pungently rich and complex with hints of night-blooming flowers and coriander in aroma and cup.</p>
 						<p>Eastern Java, Indonesia</p>
-						<a class="right" href="">BUY NOW</a>
+						<a class="button right" href="">BUY NOW</a>
 					</div>
 				</div>
 			</div>
@@ -118,17 +129,17 @@
 					<div class="column-6-12 left">
 						<h1 id="newsfeed">HAPPENINGS</h1>
 						<img class="feedphoto left" src="images/profile-photo-of-jamie.jpg" alt="Profile Photo of User Jamie">
-						<h2 class="right">Jamie</h2>
+						<h2 class="left">Jamie</h2>
 						<p class="clearfix">&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
 						<img class="feedphoto left" src="images/profile-photo-of-monica.jpg" alt="Profile Photo of User Monica">
-						<h2 class="right">Monica</h2>
+						<h2 class="left">Monica</h2>
 						<p class="clearfix">&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
 						<img class="feedphoto left" src="images/profile-photo-of-rachel.jpg" alt="Profile Photo of User Rachel">
-						<h2 class="right">Rachel</h2>
+						<h2 class="left">Rachel</h2>
 						<p class="clearfix">&ldquo;This coffee is so good, the smell of freshly ground coffee is amazing. I will be getting a ton of work done today!&rdquo;</p>
 					</div>
 					<div class="column-6-12">
-						<img class="logo" src="images/twin-finch-logo.png" alt="Twin Finch logo">
+						<img class="logo" src="images/white-twin-finch-logo.png" alt="White Colored Twin Finch logo">
 					<section id="brew-tips">
 						<h1>BREW TIPS</h1>
 						<p>Brewing a perfect cup of coffee is the weakest link in the full enjoyment of fine coffee. Buying the finest coffee is only the beginning and can go for naught if the brewing is not done correctly. It is very easy to ruin otherwise excellent coffee with improper brewing. We realize you would like to hear that once you have purchased excellent coffee beans, the rest is as simple as pushing a button, but, all we can say is: it's time to "wake up and smell the coffee".</p>
@@ -139,22 +150,23 @@
 						<h1 id="contact">CONTACT US</h1>
 						<img class="map" src="images/map.png" alt="Map of 457 NW Market St. Seattle Washington">
 						<p>457 NW Market St. Seattle, WA 94823 (394)423&ndash;4523</p>
+
 						<form>
 							<input type="text" placeholder="Name">
 							<input type="email" placeholder="Email">
 							<input type="text" placeholder="Message">
-							<button><span></span> Send Message</button>
+							<a class="button right" href="">Send Message</a>
 						</form>
-
-					
 					</div>
 				</div>
 			</div>
-		<footer>
-		<a href="">SUBSCRIBE</a>	
-		<p>&copy; 2014 Twin Finch. All right reserved.<p>
-		<img class="logo-footer" src="images/twin-finch-logo.png" alt="Twin Finch logo">
-		</footer>	
+		<div class="column-6-12 cenetered">
+			<footer>
+				<img class="logo-footer" src="images/white-twin-finch-logo.png" alt="White Colored Twin Finch logo">
+				<a href="">SUBSCRIBE</a>	
+				<small>&copy; 2014 Twin Finch. All right reserved.</small>
+			</footer>
+		</div>	
 	</div>
 </div>
 </body>
