--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 					</div>
 				</div>
 			</div>
-		<div class="column-6-12 cenetered">
+		<div class="column-6-12 centered">
 			<footer>
 				<img class="logo-footer" src="images/white-twin-finch-logo.png" alt="White Colored Twin Finch logo">
 				<a href="">SUBSCRIBE</a>	
